--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8">
         <script src="dist/js/jquery-2.2.1.min.js"></script>
         <script src="dist/js/react.js"></script>
+        <script src="dist/js/redux.js"></script>
         <script src="dist/js/react-dom.js"></script>
         <script src="dist/js/poli.js"></script>
     </head>
