--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <script src="dist/js/redux.js"></script>
         <script src="dist/js/react-dom.js"></script>
         <script src="dist/js/poli.js"></script>
+        <link rel="stylesheet" href="dist/css/style.css">
+        <title>黑喵聊天室</title>
     </head>
     <body>
         <div id="wrap"></div>
