fix interval problem

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta id="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1,  user-scalable=no,minimal-ui"
+          name="viewport">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="format-detection" content="telephone=no">
         <script src="dist/js/jquery-2.2.1.min.js"></script>
         <script src="dist/js/react.js"></script>
         <script src="dist/js/redux.js"></script>
