--- a/fe/index.html
+++ b/fe/index.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="utf-8">
     <meta id="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1,  user-scalable=no,minimal-ui" name="viewport">
-    <link rel="shortcut icon" href="icon3.png">
+    <link rel="shortcut icon" href="/icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="format-detection" content="telephone=no">
-    <script src="dist/js/jquery-2.2.1.min.js"></script>
-    <script src="dist/js/react.js"></script>
-    <script src="dist/js/redux.js"></script>
-    <script src="dist/js/react-dom.js"></script>
-    <script src="dist/js/poli.js"></script>
-    <link rel="stylesheet" href="dist/css/style.css">
+        <script>
+        function invariant(){};
+    </script>
+    <script src="/dist/js/jquery-2.2.1.min.js"></script> 
+    <script src="/dist/js/react.js"></script>
+    <script src="/dist/js/redux.min.js"></script>
+
+<!--    <script src="/dist/js/react-redux.js"></script>-->
+    <script>
+//        window.Redux=window.ReactRedux;
+        console.log(Redux)
+    </script>
+    <script src="/dist/js/react-dom.js"></script>
+    <script src="/dist/js/md5.js"></script>
+<!--    <script src="/dist/js/poli.js"></script>-->
+    <link rel="stylesheet" href="/dist/css/style.css">
     <title>黑喵聊天室</title>
 </head>
 
@@ -20,12 +30,7 @@
     <script>
         var modules = {};
     </script>
-    <script data-main="dist/js/app" src="dist/js/require.js"></script>
-    <!--
-        <script type="text/javascript" src="dist/js/RootHeader.js" charset="utf-8"></script>
-        <script type="text/javascript" src="dist/js/RootMain.js" charset="utf-8"></script>
-        <script type="text/javascript" src="dist/js/Root.js" charset="utf-8"></script>
--->
+    <script data-main="/dist/js/app" src="/dist/js/require.js"></script>
 </body>
 
 </html>
