--- a/fe/index.html
+++ b/fe/index.html
@@ -13,15 +13,11 @@
     <script src="/dist/js/react.js"></script>
     <script src="/dist/js/redux.min.js"></script>
 
-<!--    <script src="/dist/js/react-redux.js"></script>-->
-    <script>
-//        window.Redux=window.ReactRedux;
-        console.log(Redux)
-    </script>
+    <script src="/dist/js/react-redux.js"></script>
     <script src="/dist/js/react-dom.js"></script>
     <script src="/dist/js/md5.js"></script>
 <!--    <script src="/dist/js/poli.js"></script>-->
-    <link rel="stylesheet" href="/dist/css/style.css">
+<!--    <link rel="stylesheet" href="/dist/css/style.css">-->
     <title>黑喵聊天室</title>
 </head>
 
