update room system

--- a/fe/index.html
+++ b/fe/index.html
@@ -7,15 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="format-detection" content="telephone=no">
         <script>
-        function invariant(){};
+//        function invariant(){};
     </script>
-    <script src="/dist/js/jquery-2.2.1.min.js"></script> 
-    <script src="/dist/js/react.js"></script>
-    <script src="/dist/js/redux.min.js"></script>
 
-    <script src="/dist/js/react-redux.js"></script>
-    <script src="/dist/js/react-dom.js"></script>
-    <script src="/dist/js/md5.js"></script>
 <!--    <script src="/dist/js/poli.js"></script>-->
 <!--    <link rel="stylesheet" href="/dist/css/style.css">-->
     <title>黑喵聊天室</title>
