hot reload works

--- a/fe/index.html
+++ b/fe/index.html
@@ -16,11 +16,12 @@
 </head>
 
 <body>
-    <div id="wrap"></div>
+    <div id="app"></div>
     <script>
         var modules = {};
     </script>
-    <script data-main="/dist/js/app" src="/dist/js/require.js"></script>
+    <!-- <script data-main="/dist/js/app" src="/dist/js/require.js"></script> -->
+    <script src="dist/bundle.js" type="text/javascript"></script>
 </body>
 
 </html>
